--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
         <title>Tip Calculator</title>
     </head>
     <body>
-
+        <main>
+            <h1>Calculator</h1>
+            <div class="calculator">
+                <div class="inputs">
+                    <input id="" class="" type="number" placeholder="Bill">
+                    <input id="" class="" type="number" placeholder="Tip">
+                    <input id="" class="" type="number" placeholder="Number of people">
+                </div>
+                <div class="results">
+                    <p id=""></p>
+                    <p id=""></p>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
