--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
             <h1>Calculator</h1>
             <div class="calculator">
                 <div class="inputs">
-                    <input id="" class="" type="number" placeholder="Bill">
-                    <input id="" class="" type="number" placeholder="Tip">
-                    <input id="" class="" type="number" placeholder="Number of people">
+                    <input id="input-bill" class="input-bill" type="number" placeholder="Bill">
+                    <input id="input-tip" class="input-tip" type="number" placeholder="Tip">
+                    <input id="input-people" class="input-people" type="number" placeholder="Number of people">
                 </div>
                 <div class="results">
-                    <p id=""></p>
-                    <p id=""></p>
+                    <p id="display-tip" class="display-tip"></p>
+                    <p id="display-total" class="display-total"></p>
                 </div>
             </div>
         </main>
